versioned_docs/version-16.x/01.uSync/40.reference/01.config.md
---
title: appsettings.config
---

The majority of these settings will have default values that do not need to be changed.

```json title="appsettings.json"
{
    "uSync": {
        "Settings": {
            "AddOnPing": true,
            "BackgroundNotifications": false,
            "CacheFolderKeys": true,
            "CustomMappings": {},
            "DefaultExtension": ".config",
            "DefaultSet": "Default",
            "DisableDashboard": false,
            "EnableHistory": true,
            "ExportAtStartup": "None",
            "ExportOnSave": "All",
            "FailOnDuplicates": false,
            "FailOnMissingParent": false,
            "FirstBootGroup": "all",
            "Folders": ["uSync/root","uSync/v16"],
            "HideAddOns": false,
            "HistoryFolder": "uSync/history",
            "ImportAtStartup": "None",
            "ImportOnFirstBoot": false,
            "IsRootSite": false,
            "LockRoot": false,
            "LockRootTypes": "",
            "MoveToSection": true,
            "ReportDebug": false,
            "ShowVersionCheckWarning": true,
            "UiEnabledGroups": "All",
        },
        "Sets": {
            "Default": {
                "DisabledHandlers": [],
                "Enabled": true,
                "Handlers": {},
                "HandlerGroups": [],
                "HandlerDefaults": {
                    "Actions": [],
                    "Enabled": true,
                    "FailOnMissingParent": false,
                    "Group": "",
                    "GuidNames": false,
                    "Settings": {},
                    "UseFlatStructure": true
                }
            }
        }
    }
}
```

## uSync:Settings

### AddOnPing 
<!--| True/false | True |-->
Ping the jumoo.co.uk website to check for addons and updates.
```json
"Settings": {
    "AddOnPing": true,
  }
```

### BackgroundNotifications 
<!--| True/False | False |-->
Run all notifications on background thread to speed up import processing, see [Background Notifications](../guides/background)
```json
"Settings": {
    "BackgroundNotifications": false,
  }
```

### CacheFolderKeys 
<!--| True/false | False |-->
Use a cache for the names and keys of folders during import. This increases import speeds.
```json
"Settings": {
    "CacheFolderKeys": true,
  }
```

### CustomMappings 
<!--| {} | {} |-->
Custom item mappings for 3rd party or custom property editors.
```json
"Settings": {
    "CustomMappings": {},
  }
```

### DefaultExtension 
Default file extension for the uSync files. 
```json
"Settings": {
    "DefaultExtension": ".config",
  }
```

### DefaultSet 
<!--(Default, Default)-->
Name of the handler set used by default.
```json
"Settings": {
    "DefaultSet": "Default",
  }
```

### DisableDashboard
Disable the default dashboard (so people can't accidentally press the buttons).
```json
"Settings": {
    "DisableDashboard": false,
  }
```

### EnableHistory 
<!--| True/false | True |-->
Enable viewing the import and export history in the uSync dashboard.
```json
"Settings": {
    "EnableHistory": true,
  }
```

### ExportAtStartup 
<!--| [Group](#group-values) | None |-->
Handler groups used when exporting items at startup. This is a [Group Value.](#group-values)
```json
"Settings": {
    "ExportAtStartup": "None",
  }
```

### ExportOnSave 
<!--| [Group](#group-values) | All |-->
Handler groups whose items will be exported when changes are saved in Umbraco. This is a [Group Value.](#group-values)
```json
"Settings": {
    "ExportOnSave": "All",
  }
```

### FailOnDuplicates 
Fail if a duplicate file of same type and key is detected during the import process.
```json
"Settings": {
    "FailOnDuplicates": false,
  }
```

### FailOnMissingParent 
<!--| True/False | False |-->
Should an import fail if the parent of an item is missing.
```json
"Settings": {
    "FailOnMissingParent": false,
  }
```

### FirstBootGroup
Handler group(s) to run on first boot. Default is All (i.e full import). This is a [Group Value.](#group-values)
```json
"Settings": {
    "FirstBootGroup": "all",
  }
```

### Folders
Collection of folders uSync looks in when performing imports. uSync merges these folders together, for more info look at [uSync Roots](../guides/syncRoot).
```json
"Settings": {
    "Folders": ["uSync/root/","uSync/v16"],
  }
```

### HideAddOns
List of addon (tabs) you don't want to show inside uSync dashboard.
```json
"Settings": {
    "HideAddOns": false,
  }
```

### HistoryFolder
Location of the history folder.
```json
"Settings": {
    "HistoryFolder": "uSync/history",
  }
```

### ImportAtStartup 
<!--| [Group](#group-values) | None |-->
Handler groups used when importing items at startup. This is a [Group Value.](#group-values)
```json
"Settings": {
    "ImportAtStartup": "None",
  }
```

### ImportOnFirstBoot
Import the uSync folder on the first boot.
```json
"Settings": {
    "ImportOnFirstBoot": false,
  }
```

### IsRootSite
Sets this site to be the root site (so it will save into "uSync/root/").
```json
"Settings": {
    "IsRootSite": false,
  }
```

### LockRoot
When locked, you can't make changes to anything that is in the root.
```json
"Settings": {
    "LockRoot": false,
  }
```

### LockRootTypes 
Lock specific types at root so they can't be changed in child sites. 

Specific types such as: document, media, member, dictionary-item, macro, template, document-type, media-type, data-type, member-type, member-group, relation-type forms-form, forms-prevalue, forms-datasource, and language.
```json
"Settings": {
    "LockRootTypes": "",
  }
```
### MoveToSection

Add the "synchronisation" setting to Umbraco. Then you can move the uSync tree into its own section of the backoffice. This will give access to people who don't have settings access. 

```json
"Settings": {
  "MoveToSection": true
 }
```
:::note
You will have to add this section to the list of allowed sections for the groups that can access uSync (including the admin group).
:::
:::warning
Access to uSync means a user can import changes to your site that would usually only be possible if they had settings access. This means that moving uSync to a new section and removing settings access is *not* reducing the level of control a user may have over your site. They retain **full access** to what uSync will let them do, just without the settings UI. 
:::
### ReportDebug 
<!--| True/false | False |-->
Create a report while producing an export (debugging only).
```json
"Settings": {
    "ReportDebug": false,
  }
```

### ShowVersionCheckWarning 
<!--| True/false | True |-->
Display the warning box if the current import is from an older version of uSync.
```json
"Settings": {
    "ShowVersionCheckWarning": true,
  }
```

### UiEnabledGroups 
<!--| [Group](#group-values) | All  |-->
Handler groups that show in the uSync dashboard. This is a [Group Value.](#group-values)
```json
"Settings": {
    "UiEnabledGroups": "All",
  }
```

## uSync Handler Settings
The default handler set is called `default`. These settings are for that handler set, for more information on handler sets go to our [selectable sets](fundementals/sets) page.

```json
"Sets": {
  "Default": {
    "DisabledHandlers": [],
      "Enabled": true,
      "Handlers": {},
      "HandlerGroups": [],
      "HandlerDefaults": {
        "Actions": [],
        "Enabled": true,
        "FailOnMissingParent": false,
        "Group": "",
        "GuidNames": false,
        "Settings": {},
        "UseFlatStructure": true
      }
   }
  }
```


### DisabledHandlers 
<!--| List of handlers | [] | -->
List of handlers to disable for this set.

### Enabled 
<!--| True/false | True |-->
Turn on the handler set.

### HandlerGroups 
<!--| List of groups | [] | -->
List of handler groups to include in this set.

## uSync Handler Settings
Default settings for the handler, these values can be overridden for individual handlers.

### Actions 
<!--| [List of actions](#action-values) | [] | -->
List of actions for which the handler is valid. This is an [Action Value.](#action-values)

### Enabled 
<!--| True/false | True | -->
Enable or disable the handler.

### FailOnMissingParent 
<!--| True/false | False | -->
Should an import fail if the parent of an item is missing.

### Group 
<!--| "" | "" | -->
Override the group used for a handler. 

### GuidNames 
<!--| True/false | False | -->
Should uSync use the guid of an item as its file name. This ensures there are no clashes in names, but makes it harder to manually read what settings are in a folder.

### Settings 
<!--| {} | {} |--> 
Specific settings for each handler, this will override the defaults.

### UseFlatStructure
 <!--| True/false | True | --> 
 Use a flat file structure for the file produced by the handler. 

## Group Values {#group-values}
Group values can be None, All or any Settings group that you have installed on your site. The default groups are 'Settings' and 'Content'. 

*Group values can be a combination of settings groups (but all or none will override any other groups set in a list)*
| Name | Details |
| --- | ---|
| None | No groups, effectively off. |
| All | All groups, everything on. |
| Settings | Settings only (e.g Datatypes, doctypes). |
| Content | Content only (e.g media, content). |
| Forms | Umbraco Forms elements. |
| Users | Users and groups. |
| Members | Members and groups. |

## Action Values {#action-values}
Actions values determine which 'actions' a handler fires for. The handler action value can be a combination of any of the actions below.

| Name | Details |
| --- | ---|
| Report | Report any changes to items. |
| Import | Import items. |
| Export | Export items when started via dashboard. |
| Save | Export items on save. |
| All | All of the above actions.|

*The default value is all actions.*



For Handler Settings, see the [Handler Docs](../reference/handlers).

